--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta content="Nervux.fr" property="og:title" />
+		<meta content="Nervux.dev" property="og:title" />
 		<meta content="Some general information about Nervux/Omar." property="og:description" />
-		<meta content="https://nervux.fr/" property="og:url" />
+		<meta content="https://nervux.dev/" property="og:url" />
 		<meta content="assets/img/nervux.png" property="og:image" />
 		<meta content="#44377a" data-react-helmet="true" name="theme-color" />
 
