--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Nervux</h2>
-                        <p class="about__text">I'm a 15-year-old who spends most of my time on Discord, hunting down as many memes as I can find. Apart from being a meme connoisseur, I can also code Discord bots, websites, and other nifty things.</p>           
+                        <p class="about__text">I spend most of my time on Discord, hunting down as many memes as I can find. Apart from being a meme connoisseur, I can also code Discord bots, websites, and other nifty things.</p>           
                     </div>                                   
                 </div>
             </section>
@@ -160,3 +160,4 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
