Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <section class="grid" id="work-section">
             <div class="card">
                 <h3 style="color: var(--accent); margin-bottom: 10px;">WHO IS HE?</h3>
-                <p style="opacity: 0.7;">Nervux's my user but Omar's my real name, I have a loving girlfriend who's  <span class="pink-name">Mushfiqah</span> and lowkey I just try to be chill.</p>
+                <p style="opacity: 0.7;">Nervux's my user but Omar's my real name and lowkey I just try to be chill.</p>
             </div>
             <div class="card">
                 <h3 style="color: var(--accent); margin-bottom: 10px;">WHAT DOES HE EVEN DO?</h3>
@@ -349,3 +349,4 @@
     </script>
 </body>
 </html>
+
